Adapt semantic verifications to new AST.
Signed-off-by: Etienne M. Gagnon <egagnon@j-meg.com>